# 4uTools

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
crates/adb-bridge/: Cargo.toml
crates/adb-bridge/src/: bridge.rs  error.rs  lib.rs  resolver.rs
crates/device-info/: Cargo.toml
crates/device-info/src/: battery.rs  details.rs  getprop.rs  hardware.rs  lib.rs  models.rs  security.rs  service.rs  storage.rs  verification.rs
docs/: RELEASE.md
scripts/: download-platform-tools.sh  generate-latest-json.mjs  package-windows-portable.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mirror.rs
src-tauri/src/commands/: app_manager.rs  autobackup.rs  mod.rs
src-tauri/src/partner_app/: mod.rs
