[workspace]
members = [
    "src-tauri",
    "crates/adb-bridge",
    "crates/device-info",
]
resolver = "2"

[workspace.package]
version = "1.1.3"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
dirs = "6"
base64 = "0.22"
