[package]
name = "fourutools"
version = "1.1.4"
description = "Android device management suite"
authors = ["ilpano"]
edition = "2021"

[lib]
name = "fourutools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs = "6"
adb-bridge = { path = "../crates/adb-bridge" }
device-info = { path = "../crates/device-info" }
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
